Remove add to cart button from Product Grid Display and show 2nd image on hover

--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -1,6 +1,6 @@
 {% comment %} {% include 'store.js' %} {% endcomment %}
-<div id="product-card-{{ product.id }}" >
-<div class="grid-view-item{% unless product.available %} grid-view-item--sold-out{% endunless %} product-card">
+<div class="product-card" >
+<div class="grid-view-item{% unless product.available %} grid-view-item--sold-out{% endunless %}">
   <a
     class="grid-view-item__link grid-view-item__image-container full-width-link"
     href="{{ product.url | within: collection }}"
@@ -16,7 +16,7 @@
   %} {% include 'image-style' with image: product.featured_image, width: max_height, height: max_height, small_style:
   true, wrapper_id: wrapper_id, img_id: img_id %} {% endunless %}
 
-  <div id="{{ wrapper_id }}" class="grid-view-item__image-wrapper product-card__image-wrapper js">
+  {% comment %} <div id="{{ wrapper_id }}" class="grid-view-item__image-wrapper product-card__image-wrapper js">
     <div
       style="padding-top:{% unless product.featured_image == blank %}{{
         1 | divided_by: product.featured_image.aspect_ratio | times: 100
@@ -33,7 +33,7 @@
         alt="{{ img_alt }}"
       />
     </div>
-  </div>
+  </div> {% endcomment %}
 
   <noscript>
     {% capture image_size %}{{ max_height }}x{{ max_height }}{% endcapture %}
@@ -45,143 +45,32 @@
     />
   </noscript>
 
+  {{ product.images.length }}
+
+  <div class="product-card__images">
+    <div class="product-card__image-wrapper">
+        {% for image in product.images limit: 2 %}
+          {% if forloop.length > 1 %}
+            {% if forloop.first == true %}
+              <img alt="{{img_alt}}" class="primary-image" loading="lazy" width="250" height="270" src=" {{ image | img_url: '540x500' }}">
+              {% else %}
+              <img alt="{{img_alt}}" class="secondary-image" loading="lazy" width="250" height="270" src=" {{ image | img_url: '540x500' }}">
+            {% endif %}
+            {% else %}
+            <img alt="{{img_alt}}" loading="lazy" width="250" height="270" src=" {{ image | img_url: '540x500' }}">
+          {% endif %}
+        {% endfor %}
+
+  </div>
+  </div>
+
   <div class="h4 grid-view-item__title product-card__title" aria-hidden="true">{{ product.title }}</div>
-  {% comment %} {% include 'product-price', variant: product %}  {% endcomment %}
-  <div class="product-price font-weight-semibold">${ current_variant.price}$</div>
+  {% include 'product-price', variant: product %} 
   {% include 'judgeme_widgets', widget_type: 'judgeme_preview_badge', jm_style: '', concierge_install: false %}
   
 </div>
-  <div class="d-sm-flex justify-content-center align-items-center">
-    {{ product.current_variant.id }}
-
-    {% unless product.has_only_default_variant %}
-      {% for option in product.options_with_values %}
-        <div class="product-form__item d-sm-flex align-items-baseline mr-sm-2 mb-2 mb-sm-0">
-          <label class="mr-sm-1" for="SingleOptionSelector-{{ forloop.index0 }}">
-            {{ option.name }}
-          </label>
-          <select @change="variant_from_options" v-model="variant_selection.option{{ option.position }}" class="single-option-selector single-option-selector-{{ section.id }} product-form__input" id="SingleOptionSelector-{{ forloop.index0 }}" data-index="option{{ forloop.index }}">
-            {% for value in option.values %}
-              <option value="{{ value | escape }}"{% if option.selected_value == value %} selected="selected"{% endif %}>{{ value }}</option>
-            {% endfor %}
-          </select>
-        </div>
-      {% endfor %}
-    {% endunless %}
-
-    <div>
-      <button @click="handleAddToCart(current_variant_id)" type="submit" class="btn btn--secondary btn-sm">
-        {% comment %} {% include 'icon-cart' %} <span class="pull-down-1">Add to cart</span> {% endcomment %}
-        <template v-if="loading">
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          <span class="ml-1">Adding to cart...</span>
-        </template>
-        <template v-else>
-          <span class="d-none d-sm-inline-block">{% include 'icon-cart' %}</span>
-          <span id="AddToCartText-{{ section.id }}">
-            {% unless current_variant.available %}
-              {{ 'products.product.sold_out' | t }}
-            {% else %}
-              {{ 'products.product.add_to_cart' | t }}
-            {% endunless %}
-          </span>
-      </template>
-      </button>
-    </div>
-  </div>
+ 
   {% unless current.variant %}
     <p class="text-center mt-1 mb-1">{{ product.metafields.my_fields.out_of_stock_message.value }}</p>
   {% endunless %}
 </div>
-
-{% comment %} <form method="post" action="/cart/add">
-  <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
-  <div class="text-center">
-    <button @click.prevent="handleAddToCart({{ current_variant.id }})" type="submit" class="btn btn--secondary btn-sm mb-2 d-none d-sm-inline-block">
-      {% include 'icon-cart' %} <span class="pull-down-1">Add to cart</span>
-    </button>
-    <button @click.prevent="handleAddToCart({{ current_variant.id }})" type="submit" class="btn btn--secondary btn-sm mb-2 d-sm-none">Add to cart</button>
-  </div>
-</form> {% endcomment %}
-
-
-
-<script>
-  
-const ProductCardOptions{{product.id}} = {
-  name: 'Product Card',
-  delimiters: ["${", "}$"],
-  data() {
-    return {
-      loading: false,
-      quantity: 1,
-      current_variant_id: '{{ product.selected_or_first_available_variant.id }}',
-      variant_selection: {
-        option1: "{{ product.options_with_values[0].selected_value }}",
-        option2: "{{ product.options_with_values[1].selected_value }}",
-        option3: "{{ product.options_with_values[2].selected_value }}"
-      },
-      variants: [
-        {% for variant in product.variants %}
-          {
-            id: "{{variant.id}}",
-            available: {{ variant.available }},
-            option1: "{{ variant.option1 }}",
-            option2: "{{ variant.option2 }}",
-            option3: "{{ variant.option3 }}",
-            price: "{{ variant.price | money }}",
-            {% assign img_url = variant.image.src | img_url: '500x', scale: 2 %}
-            image: "{% unless img_url contains 'no-image' %}{{ img_url }}{% endunless %}"
-
-          },
-        {% endfor %} 
-      ],
-    }
-  },
-  methods: {
-    async handleAddToCart(id) {
-      console.log('Adding to cart');
-      this.error = '';
-      this.loading = true;
-      const quantity = 1;
-      try {
-        await store.dispatch('add_to_cart', {id, quantity});
-      } catch (e) {
-        this.error = e
-      }
-      this.loading = false
-    },
-    variant_from_options() {
-      const variant = this.variants.find((variant) => {
-        var match = true;
-        if(variant.option1 != '') {
-          match = variant.option1 == this.variant_selection.option1
-        }
-        if(match && variant.option2 != '') {
-          match = variant.option2 == this.variant_selection.option2
-        }
-        if(match && variant.opition3 != '') {
-          match = variant.option3 == this.variant_selection.option3
-        } 
-        return match;
-      });
-      this.current_variant_id = variant.id
-    },
-    dismissError() {
-      store.dispatch('dismiss_error');
-    }
-  },
-  computed: {
-    errorMessage() {
-      return store.state.error
-    },
-    current_variant() {
-      return this.variants.find(variant => variant.id == this.current_variant_id);
-    }
-  },
-}
-
-Product{{product.id}} = Vue.createApp(ProductCardOptions{{product.id}})
-Product{{product.id}}.mount('#product-card-{{product.id}}');
-Product{{product.id}}.use(store)
-</script>
