Product page bugfix

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -304,7 +304,7 @@
     </div>
   </div>
 </div>
-<div class="page-width mt-6" v-if="ingredients">
+<div class="page-width mt-6" v-if="ingredients.length">
   <hr>
   <h2 class="mb-5">Key Ingredients</h2>
   <div class="row">
