--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -170,7 +170,7 @@
 
     {% section 'drawer' %}
   
-{% include 'swymSnippet' %}
+
 
 </body>
 </html>
@@ -201,3 +201,44 @@
 </script>
 <script type="text/javascript" src="https://static.afterpay.com/shopify-afterpay-javascript.js"></script>
 <!-- End Shopify-Afterpay JavaScript Snippet (v1.0.6) -->
+
+
+<script src="https://a.klaviyo.com/media/js/onsite/onsite.js"></script>
+<script>
+    var klaviyo = klaviyo || [];
+    klaviyo.init({
+      account: "XU2H3q",
+      platform: "shopify",
+      list: "VKixVf"
+    });
+    klaviyo.enable("backinstock",{ 
+    trigger: {
+      product_page_text: "Notify Me When Back in Stock",
+      product_page_class: "btn",
+      product_page_text_align: "center",
+      product_page_margin: "0px",
+      replace_anchor: false
+    },
+    modal: {
+     headline: "{product_name}",
+     body_content: "Enter your email to receive a notification when this item comes back in stock. Your email address will not be shared with anyone else.",
+     email_field_label: "Your email address",
+     button_label: "Notify me when available",
+     subscription_success_label: "Success, we'll let you know when {product_name} is back in stock!",
+     footer_content: '',
+     additional_styles: "@import url('https://fonts.googleapis.com/css?family=Helvetica+Neue');",
+     drop_background_color: "#000",
+     background_color: "#fff",
+     text_color: "#222",
+     button_text_color: "#fff",
+     button_background_color: "#361a0f",
+     close_button_color: "#ccc",
+     error_background_color: "#fcd6d7",
+     error_text_color: "#C72E2F",
+     success_background_color: "#d3efcd",
+     success_text_color: "#1B9500",
+     subscribe_checked: false,
+     newsletter_subscribe_label: "Add me to your email newsletter"
+    }
+  });
+</script>
