--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -111,6 +111,10 @@
   </head>
 
   <body id="body" class="template-{{ template | split: '.' | first }}">
+
+    <div class="camomile-img"></div>
+    <div class="clover-img"></div>
+    <div class="calanine-img"></div>
     
     <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{
       'general.accessibility.skip_to_content' | t
@@ -170,6 +174,7 @@
 
     {% section 'drawer' %}
   
+    <script defer="defer" type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 
 </body>
