--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -34,28 +34,29 @@
         .announcement-bar__message {
           color: {{ section.settings.color_text }};
         }
+        .announcement-bar__message p {
+          margin-bottom: 0;
+          color: {{ section.settings.color_text }};
+        }
       </style>
 
-      {% if section.settings.message_link == blank %}
-        <div class="announcement-bar">
-      {% else %}
-        <a href="{{ section.settings.message_link }}" class="announcement-bar announcement-bar--link">
-      {% endif %}
+      <div class="announcement-bar {% if section.blocks.size > 0 %}announcement-slider{% endif%}">
+        {% for block in section.blocks %}
+          {% if block.settings.show_announcement %}
+            <div class="announcement-bar__message">{{ block.settings.announcement_text }}</div>
+          {% endif %}
 
-        <p class="announcement-bar__message">{{ section.settings.message_text | escape }}</p>
+        {% endfor %}
 
-      {% if section.settings.message_link == blank %}
-        </div>
-      {% else %}
-        </a>
-      {% endif %}
+      </div>
+   
 
     {% endif %}
   {% endif %}
 
   <header id="header" class="site-header{% if section.settings.align_logo == 'left' %} logo--left{% else %} logo--center{% endif %}" role="banner">
     <div class="page-width">
-    <div class="grid grid--no-gutters grid--table site-header__mobile-nav">
+    <div class="grid grid--no-gutters grid--table site-header__mobile-nav site-nav-wrapper">
       {% if section.settings.align_logo == 'center' %}
         <div class="grid__item small--hide medium-up--one-third">
           <div class="site-header__search">
@@ -81,24 +82,8 @@
           <div class="h2 site-header__logo">
         {% endif %}
           {% if section.settings.logo %}
-            {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
             <a href="/" class="site-header__logo-image{% if section.settings.align_logo == 'center' %} site-header__logo-image--centered{% endif %}">
-              {% capture logo_alt %}{{ section.settings.logo.alt | default: shop.name }}{% endcapture %}
-              <img class="lazyload js"
-                   src="{{ section.settings.logo | img_url: '300x300' }}"
-                   data-src="{{ img_url }}"
-                   data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
-                   data-aspectratio="{{ section.settings.logo.aspect_ratio }}"
-                   data-sizes="auto"
-                   alt="{{ logo_alt | escape }}"
-                   style="max-width: {{ section.settings.logo_max_width }}px">
-              <noscript>
-                {% capture image_size %}{{ section.settings.logo_max_width | escape }}x{% endcapture %}
-                <img src="{{ section.settings.logo | img_url: image_size }}"
-                     srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
-                     alt="{{ section.settings.logo.alt | default: shop.name }}"
-                     style="max-width: {{ section.settings.logo_max_width }}px;">
-              </noscript>
+              <img width="120" height="120" loading="eager" src="https://res.cloudinary.com/earthbar/image/upload/v1635627150/earthbar-logo-500x500_jrbpio.svg" alt="Earthbar logo">
             </a>
           {% else %}
             <a class="site-header__logo-link" href="/">{{ shop.name }}</a>
@@ -477,7 +462,7 @@ Header.use(store);
       "id": "message",
       "label": {
         "de": "Ankündigung anzeigen",
-        "en": "Show announcement",
+        "en": "Show announcement bar",
         "es": "Mostrar anuncio",
         "fr": "Afficher l'annonce",
         "it": "Mostra annuncio",
@@ -499,50 +484,6 @@ Header.use(store);
         "pt-BR": "Apenas página inicial"
       },
       "default": true
-    },
-    {
-      "type": "text",
-      "id": "message_text",
-      "label": {
-        "de": "Text",
-        "en": "Text",
-        "es": "Texto",
-        "fr": "Texte",
-        "it": "Testo",
-        "ja": "テキスト",
-        "pt-BR": "Texto"
-      },
-      "default": {
-        "de": "Hier etwas ankündigen",
-        "en": "Announce something here",
-        "es": "Anuncia algo aquí",
-        "fr": "Annoncez quelque chose ici",
-        "it": "Annuncia qualcosa qui",
-        "ja": "ここで告知してください",
-        "pt-BR": "Anuncie algo aqui"
-      }
-    },
-    {
-      "type": "url",
-      "id": "message_link",
-      "label": {
-        "de": "Link",
-        "en": "Link",
-        "es": "Enlace",
-        "fr": "Lien",
-        "it": "Link",
-        "ja": "リンク",
-        "pt-BR": "Link"
-      },
-      "info": {
-        "de": "Optional",
-        "en": "Optional",
-        "es": "Opcional",
-        "fr": "Facultatif",
-        "it": "Facoltativo",
-        "ja": "選択させる",
-        "pt-BR": "Opcional"
-      }
     },
     {
       "type": "color",
@@ -571,6 +512,34 @@ Header.use(store);
         "pt-BR": "Texto"
       },
       "default": "#fff"
+    }
+  ],
+  "blocks": [
+    {
+      "type": "text",
+      "name": "Announcement",
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "announcement_text",
+          "label": "Add announcement text below",
+          "default": "<p>Add you announcement here</p>"
+        },
+        {
+          "type": "checkbox",
+          "id": "show_announcement",
+          "label": {
+            "de": "Ankündigung anzeigen",
+            "en": "Show this announcement",
+            "es": "Mostrar anuncio",
+            "fr": "Afficher l'annonce",
+            "it": "Mostra annuncio",
+            "ja": "告知を表示する",
+            "pt-BR": "Exibir anúncio"
+          },
+          "default": false
+        }
+      ]
     }
   ]
 }
