--- a/sections/collection-template-deodorant.liquid
+++ b/sections/collection-template-deodorant.liquid
@@ -19,6 +19,7 @@
 
 <div data-section-id="{{ section.id }}" data-section-type="collection-template">
   <header class="collection-header">
+    <p>Here</p>
     {%- assign is_filter_by_available = false -%}
     {%- if section.settings.tags_enable and collection.all_tags.size > 0 -%}
       {%- assign is_filter_by_available = true -%}
